# CleanSurvival

./: .gitignore  README.md  pyproject.toml  run.py
examples/: rotterdam_interactive.py
save/: flchain.csv_results.txt  flchain.csv_timestamps.txt  gbsg_missing_10_MAR.csv_results.txt  gbsg_missing_10_MAR.csv_timestamps.txt  gbsg_missing_10_MCAR.csv_results.txt  gbsg_missing_10_MCAR.csv_timestamps.txt  gbsg_missing_10_MNAR.csv_results.txt  gbsg_missing_10_MNAR.csv_timestamps.txt  gbsg_missing_20_MAR.csv_results.txt  gbsg_missing_20_MAR.csv_timestamps.txt  gbsg_missing_20_MCAR.csv_results.txt  gbsg_missing_20_MCAR.csv_timestamps.txt  gbsg_missing_20_MNAR.csv_results.txt  gbsg_missing_20_MNAR.csv_timestamps.txt  gbsg_missing_30_MAR.csv_results.txt  gbsg_missing_30_MAR.csv_timestamps.txt  gbsg_missing_30_MCAR.csv_results.txt  gbsg_missing_30_MCAR.csv_timestamps.txt  gbsg_missing_30_MNAR.csv_results.txt  gbsg_missing_30_MNAR.csv_timestamps.txt  gbsg_missing_40_MAR.csv_results.txt  gbsg_missing_40_MAR.csv_timestamps.txt  gbsg_missing_40_MCAR.csv_results.txt  gbsg_missing_40_MCAR.csv_timestamps.txt  gbsg_missing_40_MNAR.csv_results.txt  gbsg_missing_40_MNAR.csv_timestamps.txt  gbsg_missing_50_MAR.csv_results.txt  gbsg_missing_50_MAR.csv_timestamps.txt  gbsg_missing_50_MCAR.csv_results.txt  gbsg_missing_50_MCAR.csv_timestamps.txt  gbsg_missing_50_MNAR.csv_results.txt  gbsg_missing_50_MNAR.csv_timestamps.txt  rotterdam_missing_10_MAR.csv_results.txt  rotterdam_missing_10_MAR.csv_timestamps.txt  rotterdam_missing_10_MCAR.csv_results.txt  rotterdam_missing_10_MNAR.csv_results.txt  (+26 more)
(+16 files in other folders)
